engine-net-2/examples/Errors/RuleParametersOutTypeMismatch.grs
new graph "Rules.grg"

exec (n:N)=init ;> (o:O)=r(n)

quit
